--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,12 @@ jobs:
     steps:
       - name: Generate lighthouse data
         id: lighthouse-check
-        uses: chris-ivan/test-lighthouse-action@0.19
+        uses: chris-ivan/test-lighthouse-action@0.20
         with:
           who-to-greet: "Mona the Octocat"
       - name: Upload Lighthouse Report
         uses: actions/upload-artifact@v4
         with:
           name: lighthouse-report
-          path: action/workspace/lighthouse
+          path: lighthouse
           if-no-files-found: error
